<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_settings" />
    <item
        android:id="@+id/nav_usb_dashboard"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_usb_dashboard" />
    <item
        android:id="@+id/nav_usb_storage_browser"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_usb_storage_browser" />
    <item
        android:id="@+id/nav_dns_tools"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/nav_dns_tools" />
    <item
        android:id="@+id/nav_barcode_tools"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/nav_barcode_tools" />
    <item
        android:id="@+id/nav_calendar"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/nav_calendar" />
    <item
        android:id="@+id/nav_ntp"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/nav_ntp" />
    <item
        android:id="@+id/nav_ssh"
        android:icon="@android:drawable/ic_lock_lock"
        android:title="@string/nav_ssh" />
    <item
        android:id="@+id/nav_password"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/nav_password" />
</menu>

